--- a/SSTU_S2/reset.css
+++ b/SSTU_S2/reset.css
@@ -1,9 +1,8 @@
 
 html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+h1, h2, h3, h4, h5, h6, p, blockquote,
 a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
+del, dfn, em, img, ins, kbd, q, s, samp, strike, strong, sub, tt, var,
 u, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
